2005-05-08  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwndproc.c:
	* winblock.c:
	Only call ConfigureWindow from winRaiseWindow if the windows
	message dispatch loop is running.

2005-05-02  Alexander Gottwald  <ago at freedesktop dot org>

	* winerror.c:
	Print correct logfile in FatalError message

2005-04-19  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwndproc.c:
	Prevent recursive calls to winRaiseWindow. 

2005-03-10  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwndproc.c:
	Force rebuilding of window stack if a window changes it's state from 
	minimized.

2005-03-07  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwndproc.c:
	* winmultiwindowwindow.c:
	Prevent winRaiseWindow from calling ConfigureWindow if the message
	was sent from within winDestroyWindowsWindow

	DestroyWindow send a WM_WINDOWPOSCHANGED to another window causing
	a restacking of all windows, even of the window which is just about
	to destroyed and whose structures may not be intact anymore.

2005-02-24  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwndproc.c:
	on WM_WINDOWPOSCHANGED raise window directly and in sync without 
	utilizing the async windowmanager thread. Fixes some restacking 
	problems occuring which were timing dependent
	Do not raise the window on WM_ACTIVATE
	Removed unused code for WM_WINDOWPOSCHANGING
	ESC is debug key. Print status but do not abort processing the message
	
2005-02-12  Alexander Gottwald  <ago at freedesktop dot org>

	* winmultiwindowwindow.c
	* winmultiwindowwndproc.c
	* winwin32rootlesswndproc.c:
	Cleanup some message debugging
	
2005-02-12  Alexander Gottwald  <ago at freedesktop dot org>

	* win.h
	* winfont.c
	* winmultiwindowshape.c
	* winmultiwindowwindow.c
	* winpfbdd.c
	* winshaddd.c
	* winshadddnl.c
	* winshadgdi.c
	* winwindow.c:
	Fix incorrect wrapping of functions. Ensure the pointers from pScreen 